kubernetes/red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: red-container
        image: bharatbhushan05/red-app:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: red-service
spec:
  selector:
    app: red
  ports:
    - port: 80
      targetPort: 80
